assets/scss/2-modules/_timeline.scss
.timeline__scroll {
  height: 800px;
  overflow-y: scroll;
}

.timeline__wrapper {
  margin-left: auto;
  margin-right: auto;
}

@media screen and (min-width: 768px) {
  .timeline__wrapper {
    width: 80%;
  }
}

@media screen and (min-width: 992px) {
  .timeline__wrapper {
    width: 50%;
  }
}

@media screen and (min-width: 1200px) {
  .timeline__wrapper {
    width: 45%;
  }
}

